add home screen add splash screen add webview in request stuff activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">SmartFix</string>
+    <string name="center">المراكز المعتمدة للصيانة</string>
+    <string name="register">تسجيل فنيين</string>
+    <string name="maintenance">اطلب صيانة</string>
+    <string name="store">المتجر</string>
+    <string name="home_page">الصفحة الرئيسية</string>
 </resources>
