--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="store">المتجر</string>
     <string name="home_page">الصفحة الرئيسية</string>
     <string name="choose_company_name">اختر الشركه المصنعه</string>
+    <string name="welcome">اهلا بكم فى النسخة التجريبية </string>
 </resources>
