ALi (add data in store list )

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,8 @@
     <string name="latitude">خطوط العرض</string>
     <string name="longitude">خطوط الطول</string>
     <string name="none">لا يوجد</string>
+    <string name="shop">الشراء الان </string>
+    <string name="strore">المتجر </string>
+
 
 </resources>
