change in layout (store list adapter) -add 2 text view change in modl store list -add long price change ib fire base change in adapter of store list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="none">لا يوجد</string>
     <string name="shop">الشراء الان </string>
     <string name="strore">المتجر </string>
+    <string name="reyal">ريال</string>
 
 
 </resources>
